Add preliminary detector