@@ -1,14 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<artifactId>loom-cortex-consistency-action</artifactId>
-	<packaging>jar</packaging>
-	<parent>
-		<groupId>io.metaloom.loom.cortex</groupId>
-		<artifactId>loom-cortex-actions</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
-	</parent>
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <artifactId>loom-cortex-consistency-action</artifactId>
+    <packaging>jar</packaging>
+    <parent>
+        <groupId>io.metaloom.loom.cortex</groupId>
+        <artifactId>loom-cortex-actions</artifactId>
+        <version>1.0.0-SNAPSHOT</version>
+    </parent>
 
-	<name>Loom - Cortex :: Actions - Consistency</name>
+    <name>Loom - Cortex :: Actions - Consistency</name>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <release>21</release>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
